# memoranda

./: .gitignore  Cargo.toml  INSTALL.md  PACKAGE_MANAGERS.md  README.md  rust-toolchain.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benches/: memo_performance_benchmarks.rs
completions/: _memoranda  memoranda.bash  memoranda.fish
homebrew/: memoranda.rb
issues/: 000001_000001_project_setup.md  000002_000002_core_data_models.md  000003_000003_basic_cli_interface.md  000004_000004_mcp_server_implementation.md  000005_000005_memo_search_and_context.md  000006_000006_doctor_command.md  000007_000007_comprehensive_testing.md  000008_000008_error_handling_logging.md  000009_000009_performance_optimization.md  000010_000010_documentation_examples.md  000011_000011_release_preparation.md  000012.md  000012_doctor.md  000013.md
issues/complete/: 000003_000003_basic_cli_interface.md  000004_000004_mcp_server_implementation.md  000005_000005_memo_search_and_context.md  000006_000006_doctor_command.md  000011_000011_release_preparation.md  000013_log.md
scripts/: install.ps1  install.sh
specification/: index.md
src/: error.rs  lib.rs  logging.rs  main.rs  utils.rs
src/cli/: doctor.rs  help.rs  mod.rs
src/config/: settings.rs
src/mcp/: mod.rs  server.rs  tests.rs  tools.rs
src/memo/: cache.rs  mod.rs  models.rs  search.rs  storage.rs
tests/: cli_integration_tests.rs  config_integration_tests.rs  mcp_protocol_compliance_tests.rs
