[package]
name = "memoranda"
version = "0.1.0"
edition = "2024"
description = "A memory-augmented note-taking system with MCP server capabilities"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/memoranda"

[dependencies]
# MCP server implementation
mcp-sdk = "0.0.3"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers and timestamps
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Directory traversal
walkdir = "2.0"
