[package]
name = "memoranda"
version = "0.1.0"
edition = "2024"
description = "A memory-augmented note-taking system with MCP server capabilities"
authors = ["Will Ballard <wballard@mailframe.net>"]
license = "MIT"
repository = "https://github.com/wballard/memoranda"

[features]
# Enable stress tests for performance benchmarking with very large datasets
stress_tests = []

[dependencies]
# MCP server implementation
mcp-sdk = "0.0.3"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers and timestamps
ulid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }

# Directory traversal
walkdir = "2.0"

# Regular expressions
regex = "1.0"

# Version parsing
semver = "1.0"

# Terminal colors
colored = "2.0"

# Random number generation for retry jitter
fastrand = "2.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
tokio-test = "0.4"
# Property-based testing
proptest = "1.4"
# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Test assertions
assert_cmd = "2.0"
predicates = "3.0"
# JSON schema validation
jsonschema = "0.18"
# Mock testing utilities
mockall = "0.12"
# Test fixtures and randomization
fake = { version = "2.9", features = ["derive"] }
# Async testing

[[bench]]
name = "memo_performance_benchmarks"
harness = false
